Fixed some layout issues in the css

--- a/jquery.smartbanner.css
+++ b/jquery.smartbanner.css
@@ -9,7 +9,7 @@
 #smartbanner .sb-info strong { display: block; font-size: 13px; line-height: 18px; }
 #smartbanner .sb-info > span { display: block; }
 #smartbanner .sb-info em { font-style: normal; text-transform: uppercase; }
-#smartbanner .sb-button { position: absolute; right: 20px; top: 24px; border: 1px solid transparent; padding: 0 10px; min-width: 10%; height: 24px; font-size: 14px; line-height: 24px; text-align: center; font-weight: bold; color: #000; text-transform: uppercase; text-decoration: none; }
+#smartbanner .sb-button { position: absolute; right: 20px; top: 24px; border: 1px solid transparent; padding: 0 10px; min-width: 10%; height: 24px; font-size: 12px; line-height: 20px; text-align: center; font-weight: bold; color: #000; text-transform: uppercase; text-decoration: none; }
 
 #smartbanner.ios { border-color: #e8e8e8; background: -webkit-linear-gradient(top, #f4f4f4 0%,#cdcdcd 100%); background-image: -ms-linear-gradient(top, #F4F4F4 0%, #CDCDCD 100%); background-image: -moz-linear-gradient(top, #F4F4F4 0%, #CDCDCD 100%); box-shadow: 0 1px 2px rgba(0,0,0,0.5); }
 #smartbanner.ios .sb-container { margin: 0 auto; }
@@ -22,7 +22,7 @@
 #smartbanner.ios .sb-icon.gloss:after { content: ''; position: absolute; left: 0; top: -1px; border-top: 1px solid rgba(255,255,255,0.8); width: 100%; height: 50%; background: -webkit-linear-gradient(top, rgba(255,255,255,0.7) 0%,rgba(255,255,255,0.2) 100%); border-radius: 10px 10px 12px 12px; }
 
 #smartbanner.android { border-color: #212228; background: #3d3d3d url("data: image/gif;base64,R0lGODlhCAAIAIABAFVVVf///yH5BAEHAAEALAAAAAAIAAgAAAINRG4XudroGJBRsYcxKAA7"); border-top: 5px solid #88B131; }
-#smartbanner.android .sb-close { border: 0; width: 17px; height: 17px; line-height: 17px; color: #b1b1b3; background: #1c1e21; text-shadow: 0 1px 1px #000; box-shadow: 0 1px 2px rgba(0,0,0,0.8) inset,0 1px 1px rgba(255,255,255,0.3); }
+#smartbanner.android .sb-close { border: 0; width: 17px; height: 17px; line-height: 18px; color: #b1b1b3; background: #1c1e21; text-shadow: 0 1px 1px #000; box-shadow: 0 1px 2px rgba(0,0,0,0.8) inset,0 1px 1px rgba(255,255,255,0.3); }
 #smartbanner.android .sb-close:active { color: #eee; }
 #smartbanner.android .sb-info { color: #ccc; text-shadow: 0 1px 2px #000; }
 #smartbanner.android .sb-info strong { color: #fff; }
